connected/SolarPunk-Autonomous/debug_report.txt
SOLARPUNK SYSTEM DIAGNOSTIC - Tue 02/03/2026 19:01:09.33 
=========================================== 
[1] PYTHON ENVIRONMENT 
----------------------- 
Python 3.13.9
Package            Version
------------------ --------
blinker            1.9.0
certifi            2026.1.4
charset-normalizer 3.4.4
click              8.3.1
colorama           0.4.6
Flask              3.1.2
idna               3.11
itsdangerous       2.2.0
Jinja2             3.1.6
MarkupSafe         3.0.3
pip                25.2
psutil             7.2.2
requests           2.32.5
urllib3            2.6.3
Werkzeug           3.1.5
 
[2] DIRECTORY STRUCTURE 
----------------------- 
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.gitignore
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\agent.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\agent_log.txt
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\agent_simple.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\connected
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\debug.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\debug_log.txt
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\debug_report.txt
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\DEPLOY.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\dist
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\emergency_fix.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\FIX_ALL.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\fix_github.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\FIX_REPOS.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\GITHUB_WIZARD.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\logs
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\PUSH.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\QUICK_FIX.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\quick_fix.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\README.md
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\recovery_agent.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\recovery_config.yaml
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\repo_analysis.json
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\repo_intelligence.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\scripts
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\self_healing_agent.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\setup_wizard.py
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\START.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\system_status.txt
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\test_fix.bat
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\config
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\description
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\HEAD
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\info
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\objects
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\refs
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\applypatch-msg.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\commit-msg.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\fsmonitor-watchman.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\post-update.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\pre-applypatch.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\pre-commit.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\pre-merge-commit.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\pre-push.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\pre-rebase.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\pre-receive.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\prepare-commit-msg.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\push-to-checkout.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\sendemail-validate.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\hooks\update.sample
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\info\exclude
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\objects\info
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\objects\pack
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\refs\heads
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\.git\refs\tags
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\dist\index.html
C:\Users\carol\SolarPunk\connected\SolarPunk-Autonomous\scripts\auto_fix.py
 
[3] GIT STATUS 
------------- 
On branch master

No commits yet

Untracked files:
  (use "git add <file>..." to include in what will be committed)
	.gitignore
	DEPLOY.bat
	FIX_ALL.bat
	FIX_REPOS.bat
	GITHUB_WIZARD.bat
	PUSH.bat
	QUICK_FIX.bat
	README.md
	START.bat
	agent.py
	agent_log.txt
	agent_simple.py
	debug.bat
	debug_log.txt
	debug_report.txt
	dist/
	emergency_fix.bat
	fix_github.bat
	quick_fix.py
	recovery_agent.py
	recovery_config.yaml
	repo_analysis.json
	repo_intelligence.py
	scripts/
	self_healing_agent.py
	setup_wizard.py
	system_status.txt
	test_fix.bat

nothing added to commit but untracked files present (use "git add" to track)
 
[4] CLOUDFLARE CHECK 
-------------------- 
200 
[5] PYTHON MODULE CHECK 
----------------------- 
  File "<string>", line 1
    try: import flask; print('flask: OK'); except: print('flask: MISSING')
                                           ^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    try: import cv2; print('opencv: OK'); except: print('opencv: MISSING')
                                          ^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    try: import numpy; print('numpy: OK'); except: print('numpy: MISSING')
                                           ^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    try: import qrcode; print('qrcode: OK'); except: print('qrcode: MISSING')
                                             ^^^^^^
SyntaxError: invalid syntax
 
[6] AGENT FILES CHECK 
--------------------- 
 
[7] KEY DIRECTORIES 
------------------- 
dist: EXISTS 
 
[8] WINDOWS SPECIFICS 
--------------------- 

Microsoft Windows [Version 10.0.19045.6466]
PowerShell version: 
^C